# clipmind

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  start.sh
.claude/commands/: clipmind-export.md  clipmind-ingest.md  clipmind-music.md  clipmind-timeline.md
.claude/skills/: clipmind-copywrite.md  clipmind-export.md  clipmind-ingest.md  clipmind-music.md  clipmind-timeline.md
clipmind/: config.py  database.py  main.py
clipmind/models/: __init__.py  analysis.py  clip.py  copywrite.py  export.py  music.py  project.py  stability.py  timeline.py  video.py
clipmind/routers/: analysis.py  clips.py  copywrite.py  export.py  ingest.py  music.py  projects.py  stability.py  timeline.py  videos.py
clipmind/schemas/: common.py  project.py  video.py
clipmind/services/: analysis.py  capcut_export.py  clip_extraction.py  ingestion.py  location_cluster.py  metadata.py  music_analysis.py  stability.py  thumbnail.py
docs/: ARCHITECTURE.md  DATABASE.md
frontend/: AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json
product-video/: package-lock.json  package.json
product-video/scripts/: capture-all.ts  capture-screenshots.ts  record-screens.ts
product-video/src/: Root.tsx  types.ts  (+2 more)
tests/: conftest.py  test_analysis_service.py  test_api_analysis.py  test_api_copywrite.py  test_api_ingest.py  test_api_projects.py  test_api_videos.py  test_ingestion.py  test_metadata.py  test_models.py  test_thumbnail.py
(+59 files in other folders)
